--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#25D366</color>
     <color name="white">#FFFFFF</color>
     <color name="light_background">#f2f2f2</color>
+    <color name="secondaryText">#D9757575</color>
 </resources>
