--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
-        tools:listitem="@layout/item_image"/>
+        tools:listitem="@layout/item_story"/>
 
 </RelativeLayout>
