Add button to delete saved story

--- a/app/src/main/res/layout/overview_story.xml
+++ b/app/src/main/res/layout/overview_story.xml
@@ -79,6 +79,15 @@
                 android:drawablePadding="5dp"
                 android:text="@string/save"/>
 
+            <TextView
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawablePadding="5dp"
+                android:text="@string/delete"
+                android:visibility="gone"/>
+
         </FrameLayout>
 
     </LinearLayout>
